<?xml version="1.0"?>
<package format="2">
  <name>predict_test</name>
  <version>0.0.0</version>
  <description>The predict_test package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mkz@todo.todo">mkz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>uuid_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>path_planning_msgs</build_depend>
    <build_depend>ibeo_msgs</build_depend>
    <build_depend>vec_map_cpp_msgs</build_depend>
    <build_depend>tf</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>path_planning_msgs</build_export_depend>
    <build_export_depend>ibeo_msgs</build_export_depend>
    <build_export_depend>vec_map_cpp_msgs</build_export_depend>
    <build_export_depend>uuid_msgs</build_export_depend>
    <build_export_depend>visualization_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>uuid_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>path_planning_msgs</exec_depend>
    <exec_depend>ibeo_msgs</exec_depend>
    <exec_depend>vec_map_cpp_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>tf</exec_depend>
</package>
